  * fix reception of the last bytes in a http connection
    (fixes parsing of reference/playlist files using http, eg .ram)
  * fix time displaying for flac files
  * fix playback of some broken ASF streams
  * DXR3: fix crash after playing non-MPEG content
  * add support for XVR-100 (Radeon-based) framebuffers to video_out_pgx64
  * support DTS audio in AVI
  * revised FLAC playback subsystem

xine-lib (1-rc4a)
  * audio out now uses a more user friendly "Speaker arrangement" config item;
    this defaults to stereo, so if you use a different speaker arragement, like
    5.1 or other surround setups, you have to reconfigure xine using this item
  * fix possible crash in CDDB queries
  * work around the gnome-vfs sftp: method having a max read size of 256k,
    makes it possible to play AVIs over sftp:
  * added documentation for the post plugin system to the hackersguide
  * add support for decoding On2 VP5 and VP6 using Windows dlls
  * fix bugs with the colorkey overlay support introduced in rc4. under certain
    circunstances, parts of the images were not shown.
  * enable colorkey overlays for more cards using XVideo and vidix drivers.
  * make it possible for the CDDA plugin to give away Musicbrainz CD Index ID
  * several DVB improvements. add dvbs://, dvbc:// and dvbt:// mrls
  * fix static noise produced by WMA streams in some systems

xine-lib (1-rc4)
  * experimental DTS software decoder using libdts
  * SPU decoder: timestamp handling for NAV packets fixes the menu on the first
    DVD of "24" season 1
  * improved precision in metronom's audio timestamp calculation fixes some
    sync problems, especially in long-running applications
  * fix playing mpeg vob files with LPCM
  * correct field order when deinterlacing bottom-field-first streams
  * fix network cdda playback
  * fix channel swapping in wave demuxer (lpcm)
  * colorkey support for drawing OSD (XVideo only - fix some flickering)
  * avoid possible segfaults in cdda