@@ -23,6 +23,7 @@
   * add support for XVR-100 (Radeon-based) framebuffers to video_out_pgx64
   * support DTS audio in AVI
   * revised FLAC playback subsystem
+  * subtitles improvements - word wrap and new subtitle format variants
 
 xine-lib (1-rc4a)
   * audio out now uses a more user friendly "Speaker arrangement" config item;
